k8s/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: project3
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: burger-app-backend
